# DXGI

./: .gitignore  CMakeLists.txt  README.md  main.cpp  matchTemplate.cpp
ImageCapture/: CMakeLists.txt  ImageCapture.cpp  ImageCapture.h
ThreePartLibraries/lib/x64/debug/: opencv_world430d.lib
ThreePartLibraries/lib/x64/release/: opencv_world430.lib
ThreePartLibraries/lib/x86/debug/: opencv_world430d.lib
ThreePartLibraries/lib/x86/release/: opencv_world430.lib
Utils/: BmpUtils.cpp  BmpUtils.h  CMakeLists.txt  PixelUtils.cpp  PixelUtils.h
